<resources>
    <string name="app_name">facefy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="config_server">Configuración del Servidor</string>
    <string name="server_ip">Dirección IP del Servidor</string>
    <string name="puerto">Puerto</string>
    <string name="p_connect">Probar Conexión</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>

</resources>